--- a/scss/listings.scss
+++ b/scss/listings.scss
@@ -1,8 +1,6 @@
-@import 'reset';
-@import 'variables';
-@import 'placeholder';
-@import 'mixins';
-
+@import "reset";
+@import "variables";
+@import "mixins";
 
 .listings-main-image {
     background-image: url("/img/listing-main-bg.png") !important;
@@ -17,20 +15,30 @@
         transform: translate(-50%, -50%);
 
         h1 {
-            @include font-style (500, 78px, $font-size-xxlarge, $color-white);
+            @include font-style(500, 78px, $font-size-xxlarge, $color-white);
             width: 600px;
         }
 
         p {
-            @include font-style (400, 21px, $font-size-small, $color-white);
+            @include font-style(400, 21px, $font-size-small, $color-white);
         }
 
         .yellow-paragraph {
             @include flex-center(row, flex-start);
             gap: 15px;
 
-            p {
-                @include font-style (400, 21px, $font-size-small, $color-accent);
+            a {
+                @include flex-center(row, flex-start);
+                gap: 15px;
+
+                p {
+                    @include font-style(
+                        400,
+                        21px,
+                        $font-size-small,
+                        $color-accent
+                    );
+                }
             }
         }
     }
@@ -45,11 +53,11 @@
         gap: 5px;
 
         h2 {
-            @include font-style (500, 52px, $font-size-xlarge, $color-primary);
+            @include font-style(500, 52px, $font-size-xlarge, $color-primary);
         }
 
         p {
-            @include font-style (400, 32px, $font-size-medium, $color-primary);
+            @include font-style(400, 32px, $font-size-medium, $color-primary);
             text-align: center;
         }
     }
@@ -58,23 +66,6 @@
         @include flex-center(row, space-between, space-between);
         gap: 40px;
         flex-wrap: wrap;
-
-        .cities-widget {
-            background-image: url("/img/new-york.png");
-            width: 256px;
-            height: 318px;
-            background-size: cover;
-            position: relative;
-            padding: 40px;
-
-            p:first-child {
-                @include font-style (400, 22px, $font-size-large, $color-white);
-            }
-
-            p:last-child {
-                @include font-style (300, 22px, $font-size-small, $color-white);
-            }
-        }
     }
 }
 
@@ -96,20 +87,20 @@
 .properties-section {
     background-color: $color-background-section;
     width: 100%;
-    
+
     @include flex-center(column, center, center);
 
     .properties-content {
         @include flex-center(column, center, center);
         gap: 40px;
 
-        .properties-title h2{
-            @include font-style (500, 52px, $font-size-xlarge, $color-white);
+        .properties-title h2 {
+            @include font-style(500, 52px, $font-size-xlarge, $color-white);
             text-align: center;
         }
 
-        .properties-title p{
-            @include font-style (400, 52px, $font-size-medium, $color-white);
+        .properties-title p {
+            @include font-style(400, 52px, $font-size-medium, $color-white);
             text-align: center;
         }
 
@@ -133,9 +124,14 @@
                         background-color: $color-secondary;
                         border-radius: 33px;
                         padding: 2px 15px;
-    
+
                         p {
-                            @include font-style (500, 33px, $font-size-small, $color-white);  
+                            @include font-style(
+                                500,
+                                33px,
+                                $font-size-small,
+                                $color-white
+                            );
                         }
                     }
 
@@ -143,9 +139,14 @@
                         background-color: $color-accent;
                         border-radius: 33px;
                         padding: 2px 15px;
-    
+
                         p {
-                            @include font-style (500, 33px, $font-size-small, $color-primary);  
+                            @include font-style(
+                                500,
+                                33px,
+                                $font-size-small,
+                                $color-primary
+                            );
                         }
                     }
                 }
@@ -154,12 +155,22 @@
                     gap: 20px;
 
                     .left-widget-title {
-                        @include font-style (500, 32px, $font-size-xlarge, $color-white);
+                        @include font-style(
+                            500,
+                            32px,
+                            $font-size-xlarge,
+                            $color-white
+                        );
                     }
 
                     .left-widget-location {
                         @include flex-center(row, flex-start, center);
-                        @include font-style (500, 30px, $font-size-small, $color-white);
+                        @include font-style(
+                            500,
+                            30px,
+                            $font-size-small,
+                            $color-white
+                        );
                         gap: 10px;
                     }
 
@@ -168,7 +179,12 @@
                         gap: 60px;
 
                         p {
-                            @include font-style (600, 30px, $font-size-large, $color-white);
+                            @include font-style(
+                                600,
+                                30px,
+                                $font-size-large,
+                                $color-white
+                            );
                         }
 
                         .widget-properties-description {
@@ -180,7 +196,12 @@
                                 gap: 10px;
 
                                 p {
-                                    @include font-style (400, 18px, $font-size-medium, $color-white);
+                                    @include font-style(
+                                        400,
+                                        18px,
+                                        $font-size-medium,
+                                        $color-white
+                                    );
                                 }
                             }
                         }
@@ -204,7 +225,7 @@
                         background-color: $color-button-bg;
                         padding: 15px 30px;
                         border-radius: 50px;
-                        backdrop-filter: blur(10px)
+                        backdrop-filter: blur(10px);
                     }
                 }
 
@@ -228,36 +249,55 @@
                     }
 
                     .bottom-right-yellow {
-                        @include flex-center(column, space-between, space-between);
+                        @include flex-center(
+                            column,
+                            space-between,
+                            space-between
+                        );
                         background-color: $color-accent;
                         border-radius: 16px;
                         padding: 35px 40px;
                         width: 326px;
                         height: 331px;
 
-
-
                         .bottom-right-yellow-description {
-                            @include flex-center(column, flex-start, flex-start);
+                            @include flex-center(
+                                column,
+                                flex-start,
+                                flex-start
+                            );
                             gap: 15px;
 
                             .number-properties {
-                                @include font-style (600, 52px, $font-size-xlarge, $color-primary);
+                                @include font-style(
+                                    600,
+                                    52px,
+                                    $font-size-xlarge,
+                                    $color-primary
+                                );
                             }
 
                             .properties-description {
-                                @include font-style (400, 28px, $font-size-small, $color-primary);
+                                @include font-style(
+                                    400,
+                                    28px,
+                                    $font-size-small,
+                                    $color-primary
+                                );
                             }
 
                             p {
-                                @include font-style (400, 34px, $font-size-large, $color-primary);
+                                @include font-style(
+                                    400,
+                                    34px,
+                                    $font-size-large,
+                                    $color-primary
+                                );
                                 width: 247px;
                             }
-                            
                         }
                         .arrow-button {
                             @include flex-center(column, flex-end, flex-end);
-
 
                             .arrow-icon {
                                 @include flex-center(column, center, center);
@@ -267,15 +307,9 @@
                                 height: 50px;
                             }
                         }
-
                     }
                 }
             }
         }
     }
 }
-
-
-
-
-
