--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,17 +1,17 @@
 // Colors
-$color-primary: #1A1A1A;
-$color-secondary: #1F4B43;
-$color-background-section: #2D3A4F;
-$color-accent: #E7C873;
+$color-primary: #1a1a1a;
+$color-secondary: #1f4b43;
+$color-background-section: #2d3a4f;
+$color-accent: #e7c873;
 $color-background: #eeeeee;
 $color-white: #ffffff;
-$color-grey: #3D3E3F;
-$color-light-grey: #E9E9E9;
-$color-border: #FFFFFF1A;
+$color-grey: #3d3e3f;
+$color-light-grey: #e9e9e9;
+$color-border: #ffffff1a;
 $color-line: #ffffff1e;
-$color-price: #EB664E;
-$color-footer-nav: #FFFFFF78;
-$color-button-bg: #1A1A1A1C;
+$color-price: #eb664e;
+$color-footer-nav: #ffffff78;
+$color-button-bg: #1a1a1a1c;
 
 // Font-size
 $font-size-small: 15px;
@@ -27,7 +27,5 @@ $spacing-m: 20px;
 $spacing-l: 30px;
 $spacing-xl: 40px;
 
-
 // Border
 $border-solid: 1px solid $color-primary;
-
