--- a/css/listings.css
+++ b/css/listings.css
@@ -192,7 +192,7 @@ a {
   font-weight: 400;
   line-height: 21px;
   font-size: 15px;
-  color: #E7C873;
+  color: #e7c873;
   letter-spacing: normal;
 }
 
@@ -215,7 +215,7 @@ a {
   font-weight: 500;
   line-height: 52px;
   font-size: 40px;
-  color: #1A1A1A;
+  color: #1a1a1a;
   letter-spacing: normal;
 }
 .cities-section .cities-title p {
@@ -223,7 +223,7 @@ a {
   font-weight: 400;
   line-height: 32px;
   font-size: 16px;
-  color: #1A1A1A;
+  color: #1a1a1a;
   letter-spacing: normal;
   text-align: center;
 }
@@ -250,14 +250,14 @@ a {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  border: 1px solid #E9E9E9;
+  border: 1px solid #e9e9e9;
   width: 60px;
   height: 40px;
   border-radius: 40px;
 }
 
 .properties-section {
-  background-color: #2D3A4F;
+  background-color: #2d3a4f;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -315,7 +315,7 @@ a {
   gap: 10px;
 }
 .properties-section .properties-content .properties-widgets .properties-left-widget .sale-featured .for-sale {
-  background-color: #1F4B43;
+  background-color: #1f4b43;
   border-radius: 33px;
   padding: 2px 15px;
 }
@@ -328,7 +328,7 @@ a {
   letter-spacing: normal;
 }
 .properties-section .properties-content .properties-widgets .properties-left-widget .sale-featured .featured {
-  background-color: #E7C873;
+  background-color: #e7c873;
   border-radius: 33px;
   padding: 2px 15px;
 }
@@ -337,7 +337,7 @@ a {
   font-weight: 500;
   line-height: 33px;
   font-size: 15px;
-  color: #1A1A1A;
+  color: #1a1a1a;
   letter-spacing: normal;
 }
 .properties-section .properties-content .properties-widgets .properties-left-widget .left-widget-description {
@@ -458,7 +458,7 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: space-between;
-  background-color: #E7C873;
+  background-color: #e7c873;
   border-radius: 16px;
   padding: 35px 40px;
   width: 326px;
@@ -476,7 +476,7 @@ a {
   font-weight: 600;
   line-height: 52px;
   font-size: 40px;
-  color: #1A1A1A;
+  color: #1a1a1a;
   letter-spacing: normal;
 }
 .properties-section .properties-content .properties-widgets .properties-right-widgets .right-bottom-widget .bottom-right-yellow .bottom-right-yellow-description .properties-description {
@@ -484,7 +484,7 @@ a {
   font-weight: 400;
   line-height: 28px;
   font-size: 15px;
-  color: #1A1A1A;
+  color: #1a1a1a;
   letter-spacing: normal;
 }
 .properties-section .properties-content .properties-widgets .properties-right-widgets .right-bottom-widget .bottom-right-yellow .bottom-right-yellow-description p {
@@ -492,7 +492,7 @@ a {
   font-weight: 400;
   line-height: 34px;
   font-size: 20px;
-  color: #1A1A1A;
+  color: #1a1a1a;
   letter-spacing: normal;
   width: 247px;
 }
