--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -26,3 +26,62 @@
     text-align: center;
     display: inline-block;
 }
+
+// header navigation
+
+.dropdown a {
+    @include font-style(400, 30px, $font-size-medium, $color-primary);
+}
+
+.dropdown:hover .dropdown-content {
+    @include flex-center(column, center, center);
+    padding: 10px;
+}
+
+.dropbtn {
+    @include font-style(700, 60px, $font-size-medium, $color-white);
+    background-color: $color-white;
+    padding: 0 25px;
+    border: none;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: $color-white;
+    min-width: 120px;
+    border-radius: 18px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+
+    a:hover {
+        background-color: $color-background;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        border-radius: 8px;
+    }
+}
+
+// popup button
+.reg_btn {
+    padding: 25px;
+    margin: 15px 0;
+}
+
+.reg_btn input {
+    @include font-style(500, 28px, $font-size-medium, $color-white, 2px);
+    height: 45px;
+    width: 100%;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    background: $color-primary;
+    border-radius: 5px;
+}
+
+.reg_btn input:hover {
+    background: $color-white;
+    color: $color-primary;
+    border: $border-solid;
+}
