--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,43 +1,56 @@
 // Flex
 @mixin flex-center($direction: row, $justify: center, $align: center) {
-  display: flex;
-  flex-direction: $direction;
-  justify-content: $justify;
-  align-items: $align;
+    display: flex;
+    flex-direction: $direction;
+    justify-content: $justify;
+    align-items: $align;
 }
 
 // Mixins
 @mixin absCenter {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 // Button style
-@mixin button-style($bg-color: $color-accent, $text-color: $color-primary, $br-radius: 80px, $border: none, $font-size: $font-size-medium, $hover-bg-color: $color-white, $hover-text-color: $color-primary) {
-  background-color: $bg-color;
-  color: $text-color;
-  font-weight: 500;
-  cursor: pointer;
-  line-height: 54px;
-  border: $border;
-  border-radius: $br-radius;
-  font-size: $font-size;
-  transition: background-color 0.4s;
+@mixin button-style(
+    $bg-color: $color-accent,
+    $text-color: $color-primary,
+    $br-radius: 80px,
+    $border: none,
+    $font-size: $font-size-medium,
+    $hover-bg-color: $color-white,
+    $hover-text-color: $color-primary
+) {
+    background-color: $bg-color;
+    color: $text-color;
+    font-weight: 500;
+    cursor: pointer;
+    line-height: 54px;
+    border: $border;
+    border-radius: $br-radius;
+    font-size: $font-size;
+    transition: background-color 0.4s;
 
-  &:hover {
-    background-color: $hover-bg-color;
-    color: $hover-text-color;
-  }
+    &:hover {
+        background-color: $hover-bg-color;
+        color: $hover-text-color;
+    }
 }
 
-
-@mixin font-style($weight: 500, $height: 30px, $size: $font-size-medium, $color: $color-primary, $spacing: normal) {
-  font-family: "Roboto";
-  font-weight: $weight;
-  line-height: $height;
-  font-size: $size;
-  color: $color;
-  letter-spacing: $spacing;
+@mixin font-style(
+    $weight: 500,
+    $height: 30px,
+    $size: $font-size-medium,
+    $color: $color-primary,
+    $spacing: normal
+) {
+    font-family: "Roboto";
+    font-weight: $weight;
+    line-height: $height;
+    font-size: $size;
+    color: $color;
+    letter-spacing: $spacing;
 }
