--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -1,176 +1,153 @@
+@import "reset";
+@import "variables";
+@import "mixins";
 
-  html {
-    height: 100vh;
-  }
-  
-
-
-  
-  .pure {
-    color: #e75480;
-    text-decoration: underline;
-    font-weight: 600;
-  }
-  
-
-  
-  .popup {
+.popup-section {
     @include flex-center(row, center, center);
-    height: 100vh;
+    min-height: 100vh;
+    background: $color-white;
+}
+
+.container {
+    max-width: 700px;
     width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(black, .8);
-    backdrop-filter: blur(10px);
-    z-index: 9999;
-    opacity: 0;
-    visibility: hidden;
-    transition: all .3s;
-  
-    // The url changes when the anchor is triggered and CSS can watch that
-    &:target {
-      opacity: 1;
-      visibility: visible;
-    }
-    
-    &__content {
-      @include absCenter; // Our mixin to center horizontally and vertically
-  
-      width: 75%;
-      padding: 20px;
-      background-color: white;
-      box-shadow: 0 2rem 4rem rgba(black, .2);
-      border-radius: 10px;
-      overflow: hidden; // This will keep the images sharp corners from protruding past the border-radius
-  
-    }
-  
-    &__text {
-      font-size: 1.4rem;
-      margin-bottom: 4rem;
-    }
+    background: $color-white;
+    border-radius: 0.5rem;
+    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1),
+        0px 5px 12px -2px rgba(0, 0, 0, 0.1),
+        0px 18px 36px -6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin: 10px;
+}
 
-    
-  }
+.container .title {
+    @include flex-center(row, space-between, center);
+    padding: 25px;
+    background: $color-white;
+}
 
-  .form {
-    background-color: #15172b;
-    border-radius: 20px;
-    box-sizing: border-box;
-    height: 500px;
-    padding: 20px;
-    width: 320px;
-  }
-  
-  .title {
-    color: #eee;
-    font-family: sans-serif;
-    font-size: 36px;
-    font-weight: 600;
-    margin-top: 30px;
-  }
-  
-  .subtitle {
-    color: #eee;
-    font-family: sans-serif;
-    font-size: 16px;
-    font-weight: 600;
-    margin-top: 10px;
-  }
-  
-  .input-container {
-    height: 50px;
+.container .title p {
+    font-size: 25px;
+    font-weight: 500;
     position: relative;
-    width: 100%;
-  }
-  
-  .ic1 {
-    margin-top: 40px;
-  }
-  
-  .ic2 {
-    margin-top: 30px;
-  }
-  
-  .input {
-    background-color: #303245;
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    color: #eee;
-    font-size: 18px;
-    height: 100%;
-    outline: 0;
-    padding: 4px 20px 0;
-    width: 100%;
-  }
-  
-  .cut {
-    background-color: #15172b;
-    border-radius: 10px;
-    height: 20px;
-    left: 20px;
+}
+
+.container .title p::before {
+    content: "";
     position: absolute;
-    top: -20px;
-    transform: translateY(0);
-    transition: transform 200ms;
-    width: 76px;
-  }
-  
-  .cut-short {
-    width: 50px;
-  }
-  
-  .input:focus ~ .cut,
-  .input:not(:placeholder-shown) ~ .cut {
-    transform: translateY(8px);
-  }
-  
-  .placeholder {
-    color: #65657b;
-    font-family: sans-serif;
-    left: 20px;
-    line-height: 14px;
-    pointer-events: none;
-    position: absolute;
-    transform-origin: 0 50%;
-    transition: transform 200ms, color 200ms;
-    top: 20px;
-  }
-  
-  .input:focus ~ .placeholder,
-  .input:not(:placeholder-shown) ~ .placeholder {
-    transform: translateY(-30px) translateX(10px) scale(0.75);
-  }
-  
-  .input:not(:placeholder-shown) ~ .placeholder {
-    color: #808097;
-  }
-  
-  .input:focus ~ .placeholder {
-    color: #dc2f55;
-  }
-  
-  .submit {
-    background-color: #08d;
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    color: #eee;
+    bottom: 0;
+    left: 0;
+    width: 30px;
+    height: 3px;
+}
+
+.user_details {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 25px;
+}
+
+.user_details .input_box {
+    width: calc(100% / 2 - 20px);
+    margin: 0 0 12px 0;
+}
+
+.input_box label {
+    font-weight: 500;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.input_box label::after {
+    content: " *";
+    color: red;
+}
+
+.input_box input {
+    width: 100%;
+    height: 45px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    font-size: 16px;
+    padding-left: 15px;
+
+    background-color: $color-light-grey;
+
+    transition: all 120ms ease-out 0s;
+}
+
+.input_box input:focus,
+.input_box input:valid {
+    box-shadow: 0px 0px 0px 2px $color-primary;
+}
+
+form .gender {
+    padding: 0px 25px;
+}
+
+.gender .gender_title {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.gender .category {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 0;
+}
+
+.gender .category label {
+    display: flex;
+    align-items: center;
     cursor: pointer;
-    font-size: 18px;
-    height: 50px;
-    margin-top: 38px;
-    // outline: 0;
-    text-align: center;
-    width: 100%;
-  }
-  
-  .submit:active {
-    background-color: #06b;
-  }
-  
-  
-  
-  
+}
+
+.gender .category label .dot {
+    height: 18px;
+    width: 18px;
+    background: $color-light-grey;
+    border-radius: 50%;
+    margin-right: 10px;
+    border: 4px solid transparent;
+    transition: all 0.3s ease;
+}
+
+#radio_1:checked ~ .category label .one,
+#radio_2:checked ~ .category label .two,
+#radio_3:checked ~ .category label .three {
+    border-color: $color-light-grey;
+    background: $color-price;
+}
+
+.gender input {
+    display: none;
+}
+
+@media screen and (max-width: 584px) {
+    .user_details {
+        max-height: 340px;
+        overflow-y: scroll;
+    }
+
+    .user_details::-webkit-scrollbar {
+        width: 0;
+    }
+
+    .user_details .input_box {
+        width: 100%;
+    }
+
+    .gender .category {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 419px) {
+    .gender .category {
+        flex-direction: column;
+    }
+}
