--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,50 +25,6 @@ body {
 
             .navbar {
                 @include flex-center(row, center, center);
-
-                .dropdown a {
-                    @include font-style(
-                        400,
-                        30px,
-                        $font-size-medium,
-                        $color-primary
-                    );
-                }
-
-                .dropdown:hover .dropdown-content {
-                    @include flex-center(column, center, center);
-                    padding: 10px;
-                }
-
-                .dropbtn {
-                    @include font-style(
-                        700,
-                        60px,
-                        $font-size-medium,
-                        $color-white
-                    );
-                    background-color: $color-white;
-                    padding: 0 25px;
-                    border: none;
-                }
-
-                .dropdown-content {
-                    display: none;
-                    position: absolute;
-                    background-color: $color-white;
-                    min-width: 120px;
-                    border-radius: 18px;
-                    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-                    z-index: 1;
-
-                    a:hover {
-                        background-color: $color-background;
-                        text-align: center;
-                        width: 100%;
-                        height: 100%;
-                        border-radius: 8px;
-                    }
-                }
             }
 
             .nav-right-block {
@@ -116,7 +72,7 @@ body {
             .heading-primary {
                 color: $color-secondary;
                 text-transform: uppercase;
-                margin-bottom: 60px;
+                padding: 60px 0;
 
                 .heading-primary-main {
                     @include font-style(
@@ -127,6 +83,8 @@ body {
                         11px
                     );
                     display: block;
+                    padding: 10px 0;
+                    text-align: center;
                 }
 
                 .heading-primary-sub {
@@ -138,6 +96,7 @@ body {
                         9px
                     );
                     display: block;
+                    text-align: center;
                 }
             }
 
